--- a/html/register.html
+++ b/html/register.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/register.css">
+    <link rel="shortcut icon" href="/images/ruble_fy1gcwmovm7o.svg" type="image/x-icon">
     <title>Авторизация</title>
 </head>
 
 <body>
     <form class="registration-form" method="post" action="http://localhost:3000/register">
-        <h2>Регистрация</h2>
+        <h2>РЕГИСТРАЦИЯ</h2>
         <div class="form-group">
             <label for="username">Имя пользователя</label>
             <input type="text" id="username" name="username" placeholder="Введите имя" required>
@@ -22,6 +23,7 @@
         <div class="form-group">
             <label for="password">Пароль</label>
             <input type="password" id="password" name="password" placeholder="Придумайте пароль" required>
+            <button type="button" id="togglePassword">Показать пароль</button>
         </div>
         <button type="submit" class="submit-btn">Зарегистрироваться</button>
         <div class="form-footer">
@@ -30,14 +32,15 @@
     </form>
 
     <form class="login-form" style="display: none;" method="post" action="http://localhost:3000/login">
-        <h2>Вход</h2>
+        <h2>ВХОД В АККАУНТ</h2>
         <div class="form-group">
             <label for="phone">Номер телефона</label>
             <input type="tel" id="phone" name="phone" pattern="[7-8][0-9]{10}" placeholder="Введите номер телефона" required>
         </div>
         <div class="form-group">
             <label for="password">Пароль</label>
-            <input type="password" id="password" name="password" placeholder="Введите пароль" required>
+            <input type="password" id="password2" name="password" placeholder="Введите пароль" required>
+            <button type="button" id="togglePassword2">Показать пароль</button>
         </div>
         <button type="submit" class="submit-btn">Войти</button>
         <div class="form-footer">
