--- a/html/main.html
+++ b/html/main.html
@@ -93,8 +93,9 @@
             <h2>Отчет</h2>
             <div class="linechart_values" id="linechart_values"></div>
 
-            <p>тут будут подсказки для людей</p>
-        </div>
+            <div id="financial-report">
+                <p>Загрузка данных...</p>
+            </div>        </div>
 
     </main>
 
@@ -140,6 +141,45 @@
                 }
             });
         });
+
+
+
+
+        document.addEventListener('DOMContentLoaded', async () => {
+        const userId = localStorage.getItem('user_id');
+
+        if (!userId) {
+            alert('Пользователь не авторизован. Вы будете перенаправлены на страницу входа.');
+            window.location.href = '/html/register.html';
+        }
+
+        try {
+            // Запрос данных о транзакциях и отчетах
+            const response = await fetch(`http://localhost:3000/get-financial-report`);
+            if (!response.ok) throw new Error('Не удалось загрузить отчет.');
+
+            const data = await response.json();
+
+            // Подготовка данных для отчета
+            const reportContainer = document.getElementById('financial-report');
+            const { month, year, netProfit, recommendations, warnings } = data;
+
+            const recommendationsHTML = recommendations.map((rec, index) => `<li>${index + 1}. ${rec}</li>`).join('');
+            const warningsHTML = warnings.map(warning => `<li>${warning}</li>`).join('');
+
+            reportContainer.innerHTML = `
+                <h3>Финансовый отчёт за ${month} ${year}</h3>
+                <p><strong>Прибыль:</strong> ${netProfit} руб. (доходы - расходы)</p>
+                <h4>Рекомендации:</h4>
+                <ul>${recommendationsHTML}</ul>
+                <h4>Предупреждения:</h4>
+                <ul>${warningsHTML}</ul>
+            `;
+        } catch (error) {
+            console.error('Ошибка загрузки отчета:', error);
+            document.getElementById('financial-report').innerHTML = `<p>Не удалось загрузить отчет. Попробуйте позже.</p>`;
+        }
+    });
     </script>
 
 
